2012-08-01         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* configure.ac: Version 0.3.6.  All checks now pass on Linux and Cygwin.

2012-07-31         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* README: Fix address of sourceforge git repository after partially
	successful project rename to gawkextlib.

2012-07-29         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* configure.ac: Version 0.3.5.

2012-07-24         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* configure.ac: Version 0.3.3.

2012-07-24         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* README: Fix build instructions typo.
	* configure.ac: Version 0.3.2.

2012-07-22         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* configure.ac: Version 0.3.1.

2012-07-22         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* gawklib.h: Rename to gawkextlib.h.
	* gawkextlib.h: Rename _GAWK_LIB_H to _GAWKEXTLIB_H.
	* strhash.c, varinit.c: Include gawkextlib.h instead of gawklib.h.
	* README: Change package name, and add rpmbuild instructions.
	* configure.ac: Change package name to gawkextlib.
	* Makefile.am: Rename libgawklib to libgawkextlib, and rename
	header file gawklib.h to gawkextlib.h.

2012-07-21         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* configure.ac: Bump version.

2012-07-20         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* configure.ac: Bump version.

2012-07-20         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* README: Include build instructions.

2012-07-19         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* configure.ac: Improve test for PostgreSQL connectivity.

2012-07-17         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* configure.ac: Add --with-libpq-conninfo option to help test
	pgsql extension.  Set automake conditional TEST_PGSQL based on